<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_throw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="lanzarDado"
        android:text="Tirar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/txt_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="576dp"
        android:text="Contadores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/bordenum"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="498dp"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volar" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dañar_primero" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toque_mortal" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/antimaleficio" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vinculo_vital" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/antimaleficio" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vinculo_vital" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amenaza" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alcance" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrollar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>